docs-archive/apache-airflow-providers-microsoft-azure/12.5.0/_sources/_api/airflow/providers/microsoft/azure/operators/powerbi/index.rst.txt
airflow.providers.microsoft.azure.operators.powerbi
===================================================

.. py:module:: airflow.providers.microsoft.azure.operators.powerbi


Classes
-------

.. autoapisummary::

   airflow.providers.microsoft.azure.operators.powerbi.PowerBILink
   airflow.providers.microsoft.azure.operators.powerbi.PowerBIDatasetRefreshOperator
   airflow.providers.microsoft.azure.operators.powerbi.PowerBIWorkspaceListOperator
   airflow.providers.microsoft.azure.operators.powerbi.PowerBIDatasetListOperator


Module Contents
---------------

.. py:class:: PowerBILink

   Bases: :py:obj:`airflow.sdk.BaseOperatorLink`


   Construct a link to monitor a dataset in Power BI.


   .. py:attribute:: name
      :value: 'Monitor PowerBI Dataset'


      Name of the link. This will be the button name on the task UI.



   .. py:method:: get_link(operator, *, ti_key)

      Link to external system.

      :param operator: The Airflow operator object this link is associated to.
      :param ti_key: TaskInstance ID to return link for.
      :return: link to external system



.. py:class:: PowerBIDatasetRefreshOperator(*, dataset_id, group_id, conn_id = PowerBIHook.default_conn_name, timeout = 60 * 60 * 24 * 7, proxies = None, api_version = None, check_interval = 60, request_body = None, **kwargs)

   Bases: :py:obj:`airflow.providers.microsoft.azure.version_compat.BaseOperator`


   Refreshes a Power BI dataset.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:PowerBIDatasetRefreshOperator`

   :param dataset_id: The dataset id.
   :param group_id: The workspace id.
   :param conn_id: Airflow Connection ID that contains the connection information for the Power BI account used for authentication.
   :param timeout: Time in seconds to wait for a dataset to reach a terminal status for asynchronous waits. Used only if ``wait_for_termination`` is True.
   :param check_interval: Number of seconds to wait before rechecking the
       refresh status.
   :param request_body: Additional arguments to pass to the request body, as described in https://learn.microsoft.com/en-us/rest/api/power-bi/datasets/refresh-dataset-in-group#request-body.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('dataset_id', 'group_id')



   .. py:attribute:: template_fields_renderers


   .. py:attribute:: operator_extra_links


   .. py:attribute:: hook


   .. py:attribute:: dataset_id


   .. py:attribute:: group_id


   .. py:attribute:: wait_for_termination
      :value: True



   .. py:attribute:: conn_id
      :value: 'powerbi_default'



   .. py:attribute:: timeout
      :value: 604800



   .. py:attribute:: check_interval
      :value: 60



   .. py:attribute:: request_body
      :value: None



   .. py:property:: proxies
      :type: dict | None



   .. py:property:: api_version
      :type: str | None



   .. py:method:: execute(context)

      Refresh the Power BI Dataset.



   .. py:method:: get_refresh_status(context, event = None)

      Push the refresh Id to XCom then runs the Trigger to wait for refresh completion.



   .. py:method:: execute_complete(context, event)

      Return immediately - callback for when the trigger fires.

      Relies on trigger to throw an exception, otherwise it assumes execution was successful.



.. py:class:: PowerBIWorkspaceListOperator(*, conn_id = PowerBIHook.default_conn_name, timeout = 60 * 60 * 24 * 7, proxies = None, api_version = None, **kwargs)

   Bases: :py:obj:`airflow.providers.microsoft.azure.version_compat.BaseOperator`


   Gets a list of workspaces where the service principal from the connection is assigned as admin.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:PowerBIWorkspaceListOperator`

   :param conn_id: The connection Id to connect to PowerBI.
   :param timeout: The HTTP timeout being used by the `KiotaRequestAdapter`. Default is 1 week (60s * 60m * 24h * 7d).
       When no timeout is specified or set to None then there is no HTTP timeout on each request.
   :param proxies: A dict defining the HTTP proxies to be used (default is None).
   :param api_version: The API version of the Microsoft Graph API to be used (default is v1).
       You can pass an enum named APIVersion which has 2 possible members v1 and beta,
       or you can pass a string as `v1.0` or `beta`.


   .. py:attribute:: hook


   .. py:attribute:: conn_id
      :value: 'powerbi_default'



   .. py:attribute:: timeout
      :value: 604800



   .. py:property:: proxies
      :type: dict | None



   .. py:property:: api_version
      :type: str | None



   .. py:method:: execute(context)

      List visible PowerBI Workspaces.



   .. py:method:: execute_complete(context, event)

      Return immediately - callback for when the trigger fires.

      Relies on trigger to throw an exception, otherwise it assumes execution was successful.



.. py:class:: PowerBIDatasetListOperator(*, group_id, conn_id = PowerBIHook.default_conn_name, timeout = 60 * 60 * 24 * 7, proxies = None, api_version = None, **kwargs)

   Bases: :py:obj:`airflow.providers.microsoft.azure.version_compat.BaseOperator`


   Gets a list of datasets where the service principal from the connection is assigned as admin.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:PowerBIDatasetListOperator`

   :param conn_id: The connection Id to connect to PowerBI.
   :param group_id: The group Id to list discoverable datasets.
   :param timeout: The HTTP timeout being used by the `KiotaRequestAdapter`. Default is 1 week (60s * 60m * 24h * 7d).
       When no timeout is specified or set to None then there is no HTTP timeout on each request.
   :param proxies: A dict defining the HTTP proxies to be used (default is None).
   :param api_version: The API version of the Microsoft Graph API to be used (default is v1).
       You can pass an enum named APIVersion which has 2 possible members v1 and beta,
       or you can pass a string as `v1.0` or `beta`.


   .. py:attribute:: hook


   .. py:attribute:: conn_id
      :value: 'powerbi_default'



   .. py:attribute:: group_id


   .. py:attribute:: timeout
      :value: 604800



   .. py:property:: proxies
      :type: dict | None



   .. py:property:: api_version
      :type: str | None



   .. py:method:: execute(context)

      List visible PowerBI datasets within group (Workspace).



   .. py:method:: execute_complete(context, event)

      Return immediately - callback for when the trigger fires.

      Relies on trigger to throw an exception, otherwise it assumes execution was successful.



